<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_page_bg"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:paddingLeft="30px"
    android:paddingTop="30px"
    android:paddingRight="30px"
    android:paddingBottom="30px">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_weight="3.5"
        android:foreground="?android:attr/selectableItemBackground"
        android:stateListAnimator="@drawable/card_touch_raise"
        app:cardBackgroundColor="@color/color_mine_fragment_card"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_mine_fragment_card"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.autoai.themestore.widget.CircleImageView
                android:id="@+id/imageViewUserIcon"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="80dp"
                android:src="@mipmap/head" />

            <TextView
                android:id="@+id/textViewUserName"
                style="@style/textAppearanceXXXLargeBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/unlogin" />

            <Button
                android:id="@+id/button_login"
                style="@style/textAppearanceXXLarge"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/button_selector"
                android:text="@string/login"
                android:textColor="@color/white" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6.5"
        android:columnCount="3"
        android:rowCount="2">

        <android.support.v7.widget.CardView
            android:id="@+id/buttonMyPurchase"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:stateListAnimator="@drawable/card_touch_raise"
            app:cardBackgroundColor="@color/color_mine_fragment_card"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/tv_my_purchase"
                style="@style/textAppearanceXXXLargeBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/selector_card_my_purchase"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/my_purchase" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/buttonMyMessage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:stateListAnimator="@drawable/card_touch_raise"
            app:cardBackgroundColor="@color/color_mine_fragment_card"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/tv_my_message"
                style="@style/textAppearanceXXXLargeBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/selector_card_my_message"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/my_message" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/buttonMyCollection"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:enabled="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:stateListAnimator="@drawable/card_touch_raise"
            app:cardBackgroundColor="@color/color_mine_fragment_card"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/tv_my_collection"
                style="@style/textAppearanceXXXLargeBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/selector_card_my_collection"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/my_collection" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/buttonContactUs"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:stateListAnimator="@drawable/card_touch_raise"
            app:cardBackgroundColor="@color/color_mine_fragment_card"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/tv_contact_us"
                style="@style/textAppearanceXXXLargeBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/contact_us_color"
                android:gravity="center"
                android:text="@string/contact_us" />
        </android.support.v7.widget.CardView>
    </GridLayout>

</LinearLayout>